添加一些静态图片文件，首页的代码，sass公共变量

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "dev:rn": "npm run build:rn -- --watch",
     "dev:qq": "npm run build:qq -- --watch",
     "dev:jd": "npm run build:jd -- --watch",
-    "dev:harmony-hybrid": "npm run build:harmony-hybrid -- --watch"
+    "dev:harmony-hybrid": "npm run build:harmony-hybrid -- --watch",
+    "lint-staged": "lint-staged"
   },
   "browserslist": [
     "defaults and fully supports es6-module",
@@ -82,6 +83,6 @@
     }
   },
   "lint-staged": {
-    "*.{js,ts,tsx,jsx}": "eslint --cache"
+    "*.{ts,tsx,js,vue,jsx}": "eslint"
   }
 }
