--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "@tarojs/runtime": "4.0.4",
     "@tarojs/shared": "4.0.4",
     "@tarojs/taro": "4.0.4",
+    "express": "^4.19.2",
+    "log4js": "^6.9.1",
+    "mysql2": "^3.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
