--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tarojs/runtime": "4.0.4",
     "@tarojs/shared": "4.0.4",
     "@tarojs/taro": "4.0.4",
+    "dayjs": "^1.11.12",
     "express": "^4.19.2",
     "log4js": "^6.9.1",
     "mysql2": "^3.11.0",
