添加下单页，登录检验useAuth

--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   ],
   "author": "",
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.24.7",
     "@babel/runtime": "^7.24.4",
+    "@rollup/plugin-babel": "^6.0.4",
     "@tarojs/components": "4.0.4",
     "@tarojs/helper": "4.0.4",
     "@tarojs/plugin-framework-react": "4.0.4",
